# snippet

./: CMakeLists.txt  CallbackSnippet.java  CallbackSnippet.kt  NumberConvert.java  README.md  ffplay.c  hideSoftInputFromWindow.java
app/: build.gradle
app/src/androidTest/java/me/oogh/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/me/oogh/demo/: AppContext.java
app/src/main/java/me/oogh/demo/adapter/: SnippetPagerAdapter.java  SnippetRecyclerAdapter.java
app/src/main/java/me/oogh/demo/base/: BasePresenter.java  BaseView.java
app/src/main/java/me/oogh/demo/common/: ActionModeCallback.java  Actionable.java  OnItemClickHelper.java  OnItemClickListener.java
app/src/main/java/me/oogh/demo/data/: ISnippetDataSource.java  Snippet.java  SnippetRepository.java
app/src/main/java/me/oogh/demo/db/: SnippetDAO.java  SnippetDBContract.java  SnippetDBHelper.java
app/src/main/java/me/oogh/demo/snippet/: SnippetActivity.java  SnippetContract.java  SnippetFragment.java  SnippetPresenter.java  (+2 more)
app/src/main/res/drawable/: ic_color.xml
app/src/main/res/drawable-v21/: ic_ripple.xml
app/src/main/res/layout/: main_activity.xml  main_fragment.xml  main_item_local_recycle.xml  main_tab_local_fragment.xml  main_tab_remote_fragment.xml
app/src/main/res/menu/: main_action_mode_items.xml  main_toolbar_action_items.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/me/oogh/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
